// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconButton /> <IconButton.IconButtonWithTooltip> renders with required props 1`] = `
<button
  aria-label="alternative"
  className="btn-icon btn-icon-primary btn-icon-md"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  type="button"
>
  <span
    className="btn-icon__icon-container"
  >
    <span
      className="pgn__icon btn-icon__icon"
    >
      <svg
        aria-hidden={true}
        fill="none"
        focusable={false}
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 7h2v2h-2V7Zm0 4h2v6h-2v-6Zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </span>
</button>
`;

exports[`<IconButton /> renders with deprecated props 1`] = `
<button
  aria-label="alternative"
  className="btn-icon btn-icon-primary btn-icon-md"
  onClick={[Function]}
  type="button"
>
  <span
    className="btn-icon__icon-container"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-copy btn-icon__icon"
      data-icon="copy"
      data-prefix="pgn"
      focusable="false"
      role="img"
      style={{}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M384 336l-192 0c-8.8 0-16-7.2-16-16l0-256c0-8.8 7.2-16 16-16l140.1 0L400 115.9 400 320c0 8.8-7.2 16-16 16zM192 384l192 0c35.3 0 64-28.7 64-64l0-204.1c0-12.7-5.1-24.9-14.1-33.9L366.1 14.1c-9-9-21.2-14.1-33.9-14.1L192 0c-35.3 0-64 28.7-64 64l0 256c0 35.3 28.7 64 64 64zM64 128c-35.3 0-64 28.7-64 64L0 448c0 35.3 28.7 64 64 64l192 0c35.3 0 64-28.7 64-64l0-32-48 0 0 32c0 8.8-7.2 16-16 16L64 464c-8.8 0-16-7.2-16-16l0-256c0-8.8 7.2-16 16-16l32 0 0-48-32 0z"
        fill="currentColor"
        style={{}}
      />
    </svg>
  </span>
</button>
`;

exports[`<IconButton /> renders with required props 1`] = `
<button
  aria-label="alternative"
  className="btn-icon btn-icon-primary btn-icon-md"
  onClick={[Function]}
  type="button"
>
  <span
    className="btn-icon__icon-container"
  >
    <span
      className="pgn__icon btn-icon__icon"
    >
      <svg
        aria-hidden={true}
        fill="none"
        focusable={false}
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 7h2v2h-2V7Zm0 4h2v6h-2v-6Zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </span>
</button>
`;
